# game-of-life

./: .gitignore  CMakeLists.txt  README.md
include/: field.h  game.h  settings.h  window.h
src/: main.cpp
